# arr-stack-mcp

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOAL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml
docker/: Dockerfile
docker/test-stack/: docker-compose.test.yml
docs/: ARCHITECTURE.md
examples/: mcp-client-session.md  mcp-live-homelab-output.json  mcp-live-homelab.py  mcp-smoke-output.json  mcp-smoke-v02-output.json  mcp-smoke-v02.py  mcp-smoke.py
goals/: GOAL-v0.2-and-ibis-migration.md
notes/: DESIGN-v0.2.md  RESEARCH-ibis-bot-followups.md  RESEARCH-ibis-bot-patterns.md  RESEARCH-openapi-pinning.md  RESEARCH-openapi-surface.md  RESEARCH-prior-art.md  RESEARCH-toolchain.md  V0.1.0-HANDOFF.md
scripts/: regen-clients.sh  test-stack-down.sh  test-stack-up.sh
specs/: jellyfin.openapi.json  lidarr.tag  prowlarr.tag  radarr.tag  sonarr.tag
src/arr_stack_mcp/: __init__.py  __main__.py  _mcp.py  auth.py  cli.py  config.py  errors.py  fuzzy.py  http.py  policy.py  server.py
src/arr_stack_mcp/tools/: __init__.py  common.py
src/arr_stack_mcp/tools/jellyfin/: __init__.py  _client.py  _models.py  tools.py
src/arr_stack_mcp/tools/lidarr/: __init__.py  _client.py  _models.py  tools.py
src/arr_stack_mcp/tools/prowlarr/: __init__.py  _client.py  _models.py  tools.py
src/arr_stack_mcp/tools/radarr/: __init__.py  _client.py  _models.py  tools.py
src/arr_stack_mcp/tools/sonarr/: __init__.py  _client.py  _models.py  tools.py
src/arr_stack_mcp/tools/stack/: __init__.py  _models.py  tools.py
tests/: conftest.py
tests/integration/: conftest.py  test_prowlarr_integration.py  test_sonarr_integration.py
tests/unit/: test_auth.py  test_config.py  test_dryrun.py  test_fuzzy.py  test_fuzzy_acronym.py  test_generated_smoke.py  test_hourly_caps.py  test_init_wizard.py  test_jellyfin_users.py  test_policy.py  test_prowlarr_tools.py  test_server_instructions.py  test_sonarr_series_status.py  test_stack_tools.py  test_token_store_sqlite.py
